This is 4th commit from myBranch-01 Branch. Here i modified my HTML and CSS file. I added About section in html and gave good look using CSS.

--- a/index.html
+++ b/index.html
@@ -28,5 +28,20 @@
         </div>
 
     </div>
+    <!--This is my About section of my website ---->
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="about-col-1">
+                    <img src="Image_Folder/user.png">
+                </div>
+                <div class="about-col-2">
+                    <h1 class="sub-title">About Me</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, praesentium modi, voluptas beatae id velit consectetur provident, aliquid amet autem debitis minus dicta error? Commodi eaque facilis beatae quos numquam?</p>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
