--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PersonalPortfolio website-John_Cena</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/351e5785c4.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div id="header">
         <div class="container">
@@ -37,18 +40,21 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, praesentium modi, voluptas beatae id velit consectetur provident, aliquid amet autem debitis minus dicta error? Commodi eaque facilis beatae quos numquam?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, praesentium modi, voluptas beatae
+                        id velit consectetur provident, aliquid amet autem debitis minus dicta error? Commodi eaque
+                        facilis beatae quos numquam?</p>
                     <!-- This is the sub-About section of my website -->
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="openTab('skills')">Skills</p>
                         <p class="tab-links" onclick="openTab('experience')">Experience</p>
                         <p class="tab-links" onclick="openTab('education')">Education</p>
                     </div>
-                    <div class="tab-contents active-tab" id="skills"> 
+                    <div class="tab-contents active-tab" id="skills">
                         <ul>
                             <li><span>UI/UX</span><br>Designing Web/App interfaces</li>
                             <li><span>Web Development</span><br>Web App Development</li>
-                            <li><span>App Development</span><br>Building Android/IOS Apps<li>
+                            <li><span>App Development</span><br>Building Android/IOS Apps
+                            <li>
 
                         </ul>
                     </div>
@@ -56,14 +62,17 @@
                         <ul>
                             <li><span>2021 - Current</span><br>UI/UX Design Training at ET Institute</li>
                             <li><span>2019 - 2021</span><br>Team lead at StarApp LLC.</li>
-                            <li><span>2016 - 2017</span><br>UI/UX Design Executive at Coin Digital Ltd.<li>
+                            <li><span>2016 - 2017</span><br>UI/UX Design Executive at Coin Digital Ltd.
+                            <li>
 
                         </ul>
-                    </div><div class="tab-contents" id="education">
+                    </div>
+                    <div class="tab-contents" id="education">
                         <ul>
                             <li><span>2016</span><br>UI/UX Design Training at ET Institute</li>
                             <li><span>2016 </span><br>MBA from MIT Bangalore</li>
-                            <li><span>2014</span><br>BBA from ISM Bangalore<li>
+                            <li><span>2014</span><br>BBA from ISM Bangalore
+                            <li>
 
                         </ul>
                     </div>
@@ -72,20 +81,77 @@
             </div>
         </div>
     </div>
+    <!-- This is Services section -->
+    <div id="services">
+        <div class="container">
+            <h1 class="sub-title">My Services</h1>
+            <div class="services-list">
+                <div>
+                    <i class="fa-solid fa-code"></i>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A quaerat nisi assumenda, hic quo nulla,
+                        voluptatem deserunt labore quos magnam impedit adipisci et. Neque odit in ad quisquam, eius
+                        nisi.</p>
+                    <a href="#">Learn More</a>
+                </div>
+                <div>
+                    <i class="fa-solid fa-crop"></i>
+                    <h2>UI/UX Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A quaerat nisi assumenda, hic quo nulla,
+                        voluptatem deserunt labore quos magnam impedit adipisci et. Neque odit in ad quisquam, eius
+                        nisi.</p>
+                    <a href="#">Learn More</a>
+                </div>
+                <div>
+                    <i class="fa-brands fa-app-store-ios"></i>
+                    <h2>App Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A quaerat nisi assumenda, hic quo nulla,
+                        voluptatem deserunt labore quos magnam impedit adipisci et. Neque odit in ad quisquam, eius
+                        nisi.</p>
+                    <a href="#">Learn More</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- This is my Portfolio section -->
+    <div id="Portfolio">
+        <div class="container">
+            <h1 class="sub-title">My Work</h1>
+            <div class="work-list">
+                <div class="work">
+                    <img src="Image_Folder/work-1.png">
+                </div>
+            </div>
+            <div class="work-list">
+                <div class="work">
+                    <img src="Image_Folder/work-2.png">
+                </div>
+            </div><div class="work-list">
+                <div class="work">
+                    <img src="Image_Folder/work-3.png">
+                </div>
+            </div>
+        </div>
+
+    </div>
     <script>
 
         var tablinks = document.getElementsByClassName("tab-links");
         var tabcontents = document.getElementsByClassName("tab-contents");
 
-        function onclick(tabname){
-            for(tablink of tablinks){
+        function openTab(tabName) {
+            for (tablink of tablinks) {
                 tablink.classList.remove("active-link");
             }
-            for(tabcontent of tabcontents){
+
+            for (tabcontent of tabcontents) {
                 tabcontent.classList.remove("active-tab");
             }
+            event.currentTarget.classList.add("active-link");
+            document.getElementById(tabName).classList.add("active-tab");
         }
 
     </script>
 </body>
+
 </html>
