This is my 7th commit myBranch-01 Branch. Till now i added HOME ABOUT SERVICES PORTFOLIO for my website.

--- a/index.html
+++ b/index.html
@@ -120,19 +120,31 @@
             <div class="work-list">
                 <div class="work">
                     <img src="Image_Folder/work-1.png">
+                    <div class="layer">
+                        <h3>Social Media App</h3>
+                        <p>This app connects you to the talented people around the world.<br>Download it from the Play Store</p>
+                            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
                 </div>
-            </div>
-            <div class="work-list">
                 <div class="work">
                     <img src="Image_Folder/work-2.png">
+                    <div class="layer">
+                        <h3>Music App</h3>
+                        <p>This is the music app where you will find varieties of music collections.<br>Download it from the Play Store</p>
+                            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
                 </div>
-            </div><div class="work-list">
                 <div class="work">
                     <img src="Image_Folder/work-3.png">
+                    <div class="layer">
+                        <h3>Online Shopping App</h3>
+                        <p>This app is for those who want to buy online product from the comfort of your house.<br>Download it from the Play Store</p>
+                            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
                 </div>
             </div>
+            <a href="#" class="btn">See more</a>
         </div>
-
     </div>
     <script>
 
