--- a/index.html
+++ b/index.html
@@ -122,28 +122,67 @@
                     <img src="Image_Folder/work-1.png">
                     <div class="layer">
                         <h3>Social Media App</h3>
-                        <p>This app connects you to the talented people around the world.<br>Download it from the Play Store</p>
-                            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <p>This app connects you to the talented people around the world.<br>Download it from the Play
+                            Store</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="Image_Folder/work-2.png">
                     <div class="layer">
                         <h3>Music App</h3>
-                        <p>This is the music app where you will find varieties of music collections.<br>Download it from the Play Store</p>
-                            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <p>This is the music app where you will find varieties of music collections.<br>Download it from
+                            the Play Store</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="Image_Folder/work-3.png">
                     <div class="layer">
                         <h3>Online Shopping App</h3>
-                        <p>This app is for those who want to buy online product from the comfort of your house.<br>Download it from the Play Store</p>
-                            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <p>This app is for those who want to buy online product from the comfort of your
+                            house.<br>Download it from the Play Store</p>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
             <a href="#" class="btn">See more</a>
+        </div>
+    </div>
+
+
+    <!-- ----------This section is for contact section ------------ -->
+    <div id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="contact-left">
+                    <h1 class="sub-title">Contact Me</h1>
+                    <p><i class="fa-sharp fa-solid fa-paper-plane"></i> contact@example.com</p>
+                    <p><i class="fa-solid fa-phone"></i> 0123456789</p>
+                    <div class="social-icons">
+                        <a href="https://facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="https://linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://snapchat.com/"><i class="fa-brands fa-snapchat"></i></a>
+
+                    </div>
+                    <a href="Image_Folder/my-cv.pdf" download class="btn btn2">Download CV</a>
+                </div>
+                <div class="contact-right">
+                    <form>
+                       <input type="text" name="Name" placeholder="Your Name" required>
+                       <input type="text" name="Email" placeholder="Your Email" required>
+                       <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                       <button type="submit" class="btn btn2">Submit</button>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="copyRight">
+            <p>CopyRight © Kevin. Made with <i class="fa-sharp fa-solid fa-heart"></i> by PriYAnshuu__</p>
         </div>
     </div>
     <script>
